# plugify-plugin-s2fix

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  plugify-plugin-s2fix.pplugin.in
.github/workflows/: cmake-multiple-platform.yml
assets/: gamedata.jsonc  settings.jsonc
conda/: bld.bat  build.sh  meta.yaml.example
src/: pch.hpp
src/core/: plugin.cpp  plugin.hpp
